--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script src='./app.js'></script>
     
 </head>
-
+ 
 Привет всем
 
 <body style="background-color: aquamarine;text-align: center;">
+<img src="./reading.svg" alt="">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
